[package]
name = "checksums"
description = "Tool for making/verifying checksums of directory trees"
documentation = "https://rawcdn.githack.com/nabijaczleweli/checksums/doc/checksums/index.html"
repository = "https://github.com/nabijaczleweli/checksums"
readme = "README.md"
keywords = ["checksums", "checksum", "directory", "verification", "hash"]
categories = ["authentication", "filesystem"]
license = "MIT"
# Remember to also update in appveyor.yml
version = "0.7.1"
# Remember to also update in checksums.md
authors = ["nabijaczleweli <nabijaczleweli@gmail.com>", "Zachary Dremann <dremann@gmail.com>", "Chris Moore", "Daniel Alley <dalley@redhat.com>, Paul Bragin <zeusmods@protonmail.com>"]
exclude = ["*.enc"]
edition = "2018"

[dependencies]
futures-cpupool = "0.1.8"
once_cell = "1.7.2"
tabwriter = "1.2.1"
num_cpus = "1.13.0"
futures = "0.1.31"
walkdir = "2.3.2"
crc32c = "0.6.0"
shaman = "0.1"
blake = "2.0.1"
crc16 = "0.4"
regex = "1.5.4"
clap = "2.33.3"
crc8 = "0.1.1"
crc = "1.8.1"
pbr = "1.0.4"
md6 = "2.0.3"
blake2 = "0.9.1"
md-5 = "0.9.1"
blake3 = "0.3.7"

[dependencies.tiny-keccak]
version = "2.0.2"
features = ["sha3"]


[[bin]]
name = "checksums"
test = false
doc = false
