[package]
name = "checksums"
description = "Tool for making/verifying checksums of directory trees"
documentation = "https://rawcdn.githack.com/nabijaczleweli/checksums/doc/checksums/index.html"
repository = "https://github.com/nabijaczleweli/checksums"
readme = "README.md"
keywords = ["checksums", "checksum", "directory", "verification", "hash"]
categories = ["authentication", "filesystem"]
license = "MIT"
# Remember to also update in appveyor.yml
version = "0.8.1"
# Remember to also update in checksums.md
authors = ["nabijaczleweli <nabijaczleweli@gmail.com>",
           "Zachary Dremann <dremann@gmail.com>",
           "Chris Moore",
           "Daniel Alley <dalley@redhat.com>",
           "Paul Bragin <zeusmods@protonmail.com>"]
exclude = ["*.enc"]


[dependencies]
futures-cpupool = "0.1"
once_cell = "1.7"
tabwriter = "1.2"
whirlpool = "0.9"
num_cpus = "1.13"
futures = "0.1"
walkdir = "2.3"
blake2 = "0.9"
blake3 = "0.3"
crc32c = "0.6"
shaman = "0.1"
blake = "2.0"
crc16 = "0.4"
regex = "1.5"
clap = "2.33"
crc8 = "0.1"
md-5 = "0.9"
crc = "1.8"
pbr = "1.0"
md6 = "2.0"

[dependencies.tiny-keccak]
version = "2.0"
features = ["sha3"]


[[bin]]
name = "checksums"
test = false
doc = false
